2001-06-18 John R. Jackson <jrj@purdue.edu>

	* recover-src/extract_list.c: Do not pass a 'b' (blocking) factor
	  flag to vrestore.  Some versions do not like it.

2001-06-18 John R. Jackson <jrj@purdue.edu>

	* common-src/dgram.c: Use a sin_addr arg to inet_ntoa() like all the
	  other Amanda code.
	* common-src/stream.c: Ditto.

2001-06-18 John R. Jackson <jrj@purdue.edu>

	* changer-src/chg-manual.sh.in: Add yet another online regex.  Found
	  by George Herson <gherson@snet.net>.

2001-06-01 John R. Jackson <jrj@purdue.edu>

	* server-src/amindexd.c (build_disk_table): Make sure a holding disk
	  image is used rather than a copy also on tape, if both exist.

2001-05-29 John R. Jackson <jrj@purdue.edu>

	* server-src/reporter.c: Fix PostScript output to only show what went
	  on the tape, not what the total amount dumped.  Compliments of
	  Joshua Baker-LePain <jlb17@duke.edu>.

2001-05-18 John R. Jackson <jrj@purdue.edu>

	* client-src/patch-system.sh.in: Missed a reference to kamanda in the
	  last patch.  Compliments of Tom Schutter <t.schutter@att.net>.

2001-05-16 John R. Jackson <jrj@purdue.edu>

	* client-src/patch-system.sh.in: Go ahead and update /etc/services
	  on a client even if the services themselves are not turned on to
	  inetd.  Compliments of Tom Schutter <t.schutter@att.net>.  Add
	  the TCP port for amandad for future use.

2001-05-15 John R. Jackson <jrj@purdue.edu>

	* restore-src/amidxtaped.c: Call tape_stat() instead of stat() to
	  decide if an image is a file or a tape.

2001-05-14 John R. Jackson <jrj@purdue.edu>

	* client-src/amandad.c: Fix hang when the incoming packet size is
	  larger than the pipe buffer.  Also fix a buffer overflow bug.

2001-05-11 John R. Jackson <jrj@purdue.edu>

	* changer-src/chg-scsi.c: Add support for "-slot advance".

2001-05-11 John R. Jackson <jrj@purdue.edu>

	* common-src/util.c (bind_portrange): Log a debug message stating
	  explicitly that all ports in the requested range were busy, or